resize elements at 375px
fontsize, logo Trademe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy & Sell on NZ's javascript:void(0)1 Auction & Classified Site |Trade Me</title>
+    <title>Buy & Sell on NZ's #1 Auction & Classified Site |Trade Me</title>
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
@@ -22,53 +22,184 @@
 </head>
 
 <body>
-    <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <div class="row ">
-                <div class="col-auto">
-                    <a class="navbar-brand" href="" title="Trade Me- Life lives here">
-                        <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" alt="Bootstrap">
-                    </a>
-                    <!-- <button class="btn btn-light shadow-none dropdown-toggle d-none d-md-inline " type="button"
-                        data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
-                        Browse
-                    </button> -->
+    <div class="container-fluid px-2">
+        <!--Navbar-->
+
+        <div class="row navbar navbar-expand d-flex justify-content-around align-items-center bg-light">
+            <div class="col">
+                <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
+                    <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
+                </a>
+                <button class="btn btn-light shadow-none dropdown-toggle d-none d-md-inline " type="button"
+                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
+                    Browse
+                </button>
+
+                <div class="container-fluid mt-0 dropdown-menu bg-light ">
+                    <div class="row mx-1 ">
+                        <h3>Browse Marketplace</h3>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Antiques &
+                                    collectables</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Art</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Baby gear</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Books</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Building &
+                                    renovation</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Business, farming &
+                                    industry</a></li>
+                        </ul>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Clothing & Fashion</a>
+                            </li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Computers</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Crafts</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Electronics &
+                                    photography</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Gaming</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Health & beauty</a>
+                            </li>
+                        </ul>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Home & living</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Jewellery &
+                                    watches</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Mobile phones</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Movies & TV</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Music &
+                                    instruments</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Pets & animals</a>
+                            </li>
+                        </ul>
+                        <ul class="col ms-1 list-unstyled">
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Pottery & glass</a>
+                            </li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Sports</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Toys & models</a></li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Travel, events &
+                                    activities</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a href="javascript:void(0)" class="dropdown-item ">Trade Me Stores</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <hr class="dropdown-divider">
+                    </div>
+                    <div class="row mx-2 my-1 fw-bolder d-none d-md-flex">
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-danger">Marketplace</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-warning">Jobs</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-secondary">Motors</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-success ">Porperty</a></li>
+                        </div>
+                        <div class="col">
+                            <li><a href="javascript:void(0)" class="link-text-dark">Services</a></li>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-auto text-center">
-                    <ul class="navbar-nav ms-auto ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)"><i
-                                    class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i>
-                                <span>WatchList</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)"><i class="fa-regular fa-heart"></i>
-                                <span>Favourites</span>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)"><i class="fa-solid fa-pen"></i>
-                                <span>Start a listing</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)"><span>My Trade Me</span>
-                                <i class="fa-solid fa-user"></i></a>
-                        </li>
-                    </ul>
+
+            </div>
+
+            <div class="col navbar-nav d-flex justify-content-end btn-group">
+                <div class="nav-item ">
+                    <span class="ml-2 "></span>
+                    <button class="btn  shadow-none  ">
+                        <i class="fa-sharp fa-solid fa-binoculars fa-rotate-180"></i> WatchList
+                    </button>
+                </div>
+                <div class="nav-item d-none d-md-block ">
+                    <span class="ml-2"></span>
+                    <button class="btn shadow-none">
+                        <i class="fa-regular fa-heart"></i> Favourites
+                    </button>
+                </div>
+                <div class="nav-item d-none d-md-block ">
+                    <span class="ml-2 "></span>
+                    <button class="btn ">
+                        <i class="fa-solid fa-pen"></i>Start a listing
+                    </button>
+                </div>
+                <div class="nav-item ">
+                    <span class="ml-2"></span>
+                    <button class="btn ">
+                        My Trade Me <i class="fa-solid fa-user"></i>
+                    </button>
                 </div>
             </div>
         </div>
-    </nav>
+        <!--END NAVBAR-->
 
+        <!--Search-->
+        <div class="row bg-indigo-600">
+            <h1 class="col-12 my-4 text-white-50 display-3 ">
+                <p><strong>KIA ORA! READY TO FIND YOUR NEW?</strong></p>
+            </h1>
+            <div class="col col-md-6 input-group-lg mb-5 position-relative" id="Searching-form">
+                <input type="text" class="form-control rounded" placeholder="&#xF002; Search all of Trade Me"
+                    style="font-family:Arial, FontAwesome" aria-label="Search">
+                <div class="input-group-btn me-3 position-absolute top-50 end-0 translate-middle-y
+                 ">
+                    <button type="button" class="btn btn-primary" type="submit">Search</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row position-relative">
+            <div class="btn-group btn-group-lg d-none d-md-flex position-absolute top-0 start-50 translate-middle w-100 "
+                role="group">
+                <button type="button" class="btn btn-danger my-button">Market</button>
+                <button type="button" class="btn btn-warning">Jobs</button>
+                <button type="button" class="btn btn-secondary">Motors</button>
+                <button type="button" class="btn btn-success">Porperty</button>
+                <button type="button" class="btn btn-dark">Services</button>
+            </div>
+
+            <div class="row row-cols-2 mx-1 g-2 d-md-none position-absolute top-0 start-0 ">
+                <div class="col">
+                    <div class="p-3 border bg-light text-danger"><span class="me-1"><i
+                                class="fa-solid fa-bag-shopping"></i></span>
+                        Market</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-warning"><span class="me-1"><i
+                                class="fa-sharp fa-solid fa-briefcase"></i></span> Jobs</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-secondary"><span class="me-1"><i
+                                class="fa-solid fa-car-side"></i></span>Motors</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-success"><span class="me-1"><i
+                                class="fa-sharp fa-solid fa-house"></i></span>Porperty</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light text-dark"><span class="me-1"><i
+                                class="fa-sharp fa-solid fa-screwdriver-wrench"></i></span>Services</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border bg-light link-primary text-decoration-underline ">Browse</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--Bootstrap version v5.0.2-->
-    <script type="text/html" src="jquery/jQuery-3.6.3.min.js"></script>
-    <script type="text/javascript" src="jquery/popper.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/html" src="./jquery/jQuery-2.6.2.min.js"></script>
+    <script type="text/javascript" src="./jquery/popper.min.js"></script>
+    <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- script xu ly
-    <script src="app.js"></script> -->
+    <!--script parents-->
+    <!-- <script src="app.js"></script> -->
+
 </body>
 
 </html>
