UPDATED (FOLLOW README.MD)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <div class="container-fluid mt-0 dropdown-menu bg-light ">
                     <div class="row mx-1 ">
-                        <h3>Browse Marketplace</h3>
+                        <h3 class="menu-header">Browse Marketplace</h3>
                         <ul class="col ms-1 list-unstyled">
                             <li><a href="javascript:void(0)" class="dropdown-item ">Antiques &
                                     collectables</a></li>
@@ -143,7 +143,7 @@
                 <p><strong>KIA ORA! READY TO FIND YOUR NEW?</strong></p>
             </h1>
             <div class="col col-md-6 input-group-lg mb-5 position-relative" id="Searching-form">
-                <input type="text" class="form-control " placeholder="&#xF002; Search all of Trade Me"
+                <input type="text" class="form-control col-6 col-md-8 " placeholder="&#xF002; Search all of Trade Me"
                     style="font-family:Arial, FontAwesome" aria-label="Search">
                 <div class="input-group-btn me-3 position-absolute top-50 end-0 translate-middle-y
                  ">
