--- a/index.html
+++ b/index.html
@@ -164,30 +164,30 @@
                 <button type="button" class="btn btn-dark">Services</button>
             </div>
 
-            <div class="row row-cols-2 d-md-none my-1 px-3 g-2 position-absolute top-0 start-0 ">
+            <div class="row row-cols-2 d-md-none">
                 <div class="col">
-                    <div class="p-3 border bg-list-item text-danger"><span class="me-1"><i
+                    <div class="bg-list-item text-danger"><span class="me-1"><i
                                 class="fa-solid fa-bag-shopping"></i></span>
                         Market</div>
                 </div>
                 <div class="col">
-                    <div class="p-3 border bg-list-item text-warning"><span class="me-1"><i
+                    <div class="bg-list-item text-warning"><span class="me-1"><i
                                 class="fa-sharp fa-solid fa-briefcase"></i></span> Jobs</div>
                 </div>
                 <div class="col">
-                    <div class="p-3 border bg-list-item text-secondary"><span class="me-1"><i
+                    <div class="bg-list-item text-secondary"><span class="me-1"><i
                                 class="fa-solid fa-car-side"></i></span>Motors</div>
                 </div>
                 <div class="col">
-                    <div class="p-3 border bg-list-item text-success"><span class="me-1"><i
+                    <div class="bg-list-item text-success"><span class="me-1"><i
                                 class="fa-sharp fa-solid fa-house"></i></span>Porperty</div>
                 </div>
                 <div class="col">
-                    <div class="p-3 border bg-list-item text-dark"><span class="me-1"><i
+                    <div class="bg-list-item text-dark"><span class="me-1"><i
                                 class="fa-sharp fa-solid fa-screwdriver-wrench"></i></span>Services</div>
                 </div>
                 <div class="col">
-                    <div class="p-3 border bg-list-item link-primary text-decoration-underline ">Browse</div>
+                    <div class="bg-list-item link-primary text-decoration-underline ">Browse</div>
                 </div>
             </div>
         </div>
