--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row position-relative">
             <div class="btn-group btn-group-lg d-none d-md-flex position-absolute top-0 start-50 translate-middle "
                 role="group" id="list-item-button">
@@ -213,6 +212,126 @@
                 </div>
             </div>
         </div>
+        <!--End Navbar-->
+
+        <!--FOOTER-->
+        <div class="footer row mt-5 text-center text-md-start">
+            <div
+                class="col-12 col-md-12 navbar navbar-expand justify-content-between bg-lightnavbar navbar-expand justify-content-between bg-light">
+                <div class="col-2 col-md-2">
+                    <a class="navbar-brand" href="javascript:void(0)" title="Trade Me - Life lives here">
+                        <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid" width="150px">
+                    </a>
+                </div>
+                <div class="col-2 col-md-2">
+                    <button class="btn">WatchList</button>
+                </div>
+                <div class="col-2 col-md-2">
+                    <button class="btn">Favourites</button>
+                </div>
+                <div class="col-2 col-md-2">
+                    <button class="btn">Start a listing</button>
+                </div>
+                <div class="col-2 col-md-2">
+                    <button class="btn ">My Trade Me </button>
+                </div>
+                <div class="col-2 col-md-2">
+                    <button class="btn">Register </button>
+                    <button class="btn">Log in</button>
+                </div>
+            </div>
+            <hr class="dropdown-divider">
+            <div class="col-md-2 col-lg-2 mx-auto mt-3">
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)">
+                            <h5 class="text-uppercase mb-4 link-danger">Marketplace</h5>
+                        </a></li>
+                    <li><a href="javascript:void(0)">Latest deals</a></li>
+                    <li><a href="javascript:void(0)">Stores</a></li>
+                    <li><a href="javascript:void(0)">Closing soon</a></li>
+                    <li><a href="javascript:void(0)">$1 reserve</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 col-lg-2 mx-auto mt-3 ">
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)">
+                            <h5 class="text-uppercase mb-4 link-warning">Jobs</h5>
+                        </a></li>
+                    <li><a href="javascript:void(0)">Browse categories</a></li>
+                    <li><a href="javascript:void(0)">Careers advice</a></li>
+                    <li><a href="javascript:void(0)">JobSmart</a></li>
+                    <li><a href="javascript:void(0)">Advertisers advice</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 col-lg-2 mx-auto mt-3">
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)">
+                            <h5 class="text-uppercase mb-4 link-secondary">Motors</h5>
+                        </a></li>
+                    <li><a href="javascript:void(0)">Browse all cars</a></li>
+                    <li><a href="javascript:void(0)">Other vehicles</a></li>
+                    <li><a href="javascript:void(0)">Buying & Selling</a></li>
+                    <li><a href="javascript:void(0)">Dealer news & info</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 col-lg-2 mx-auto mt-3">
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)">
+                            <h5 class="text-uppercase mb-4 link-success">Porperty</h5>
+                        </a></li>
+                    <li><a href="javascript:void(0)">Looking to sell</a></li>
+                    <li><a href="javascript:void(0)">News & guides</a></li>
+                    <li><a href="javascript:void(0)">Home.co.nz</a></li>
+                    <li><a href="javascript:void(0)">OneHub for agents</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 col-lg-2 mx-auto mt-3">
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)">
+                            <h5 class="text-uppercase mb-4 link-text-dark">Services</h5>
+                        </a></li>
+                    <li><a href="javascript:void(0)">Trades</a></li>
+                    <li><a href="javascript:void(0)">Domestic services</a></li>
+                    <li><a href="javascript:void(0)">Event & entertainment</a></li>
+                    <li><a href="javascript:void(0)">Health & wellbeing</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 col-lg-2 mx-auto mt-3">
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)">
+                            <h5 class="text-uppercase mb-4 link-info">Community</h5>
+                        </a></li>
+                    <li><a href="javascript:void(0)">Help</a></li>
+                    <li><a href="javascript:void(0)">Announcements</a></li>
+                    <li><a href="javascript:void(0)">Trust & safety</a></li>
+                    <li><a href="javascript:void(0)">Seller information</a></li>
+                </ul>
+            </div>
+            <div class="col-12 justify-content-between  navbar navbar-expand bg-light">
+                <div class="col-2">
+                    <p>© 2023 Trade Me Limited</p>
+                </div>
+                <div class="col-9 footer-terms  ">
+                    <ul class="list-unstyled navbar navbar-expand justify-content-center">
+                        <li><a href="javascript:void(0)">Desktop site</a></li>
+                        <li><a href="javascript:void(0)">About us</a></li>
+                        <li><a href="javascript:void(0)">Careers</a></li>
+                        <li><a href="javascript:void(0)">Advertisers</a></li>
+                        <li><a href="javascript:void(0)">Privacy policy</a></li>
+                        <li><a href="javascript:void(0)">Terms & conditions</a></li>
+                        <li><a href="javascript:void(0)">Contact us</a></li>
+                    </ul>
+                </div>
+                <div class="col text-center footer-icons">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+
+
+        <!--END FOOTER-->
+
     </div>
 
     <!--Bootstrap version v5.0.2-->
